# hexagate-fund-flow

./: README.md  package-lock.json  package.json
node-server/: README.md  package-lock.json  package.json  tsconfig.json
node-server/src/: index.ts
node-server/src/api/: index.ts  schema.ts
node-server/src/api/utils/: tryParseObject.ts
node-server/src/api/v1/: index.ts
node-server/src/api/v1/funding/: graph.ts  index.ts
server/: .gitignore  README.md  data.json  pyproject.toml
server/api/: __init__.py  main.py
server/api/schema/: __init__.py
server/api/utils/: __init__.py
server/api/v1/: __init__.py
server/api/v1/funding/: __init__.py  graph.py
webapp/: package-lock.json  package.json
webapp/src/: middleware.ts
webapp/src/app/: globals.css  layout.tsx
webapp/src/app/api/: funding.ts
webapp/src/app/components/charts/: FlowChart.constants.ts  FlowChart.tsx  FundEdge.tsx  FundNode.tsx  index.ts
webapp/src/app/components/spinner/: Spinner.tsx
webapp/src/app/dashboard/: page.tsx
webapp/src/app/dashboard/hooks/: useFundsFlow.ts
webapp/src/app/providers/: ReactQueryProvider.tsx
webapp/src/app/types/: chainAddress.ts  fundingRecord.ts
webapp/src/app/utils/: getGroupLayout.ts
